[package]
name = "taps"
version = "0.2.1"
edition = "2021"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
description = """
taps (Tokio Asynchronous Pub/Sub) is an in-process async message broker
that can be used for messaging between spawned tokio tasks.
"""
homepage = "https://github.com/matthewjberger/taps"
repository = "https://github.com/matthewjberger/taps"
keywords = ["async", "tokio", "messaging"]
license = "MIT"

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }

[dev-dependencies]
log = "0.4"
env_logger = "0.10.0"
uuid = { version = "1.4.1", features = ["v4"] }
